--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,4 @@
 {
   "buildCommand": "npm run build:vercel",
-  "outputDirectory": "dist/public",
-  "functions": {
-    "api/**/*.ts": {
-      "runtime": "nodejs20.x"
-    }
-  }
+  "outputDirectory": "dist/public"
 }
