--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
-  "buildCommand": "npm run build:vercel",
-  "outputDirectory": "dist/public"
+  "framework": "vite",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist"
 }
